styles/index.css
@font-face { /* FW: 300, FS: normal */
  font-family: 'IBM Plex Sans';
  src: url('../assets/fonts/IBM_Plex_Sans/IBMPlexSans-Light.woff2') format('woff2'),
      url('../assets/fonts/IBM_Plex_Sans/IBMPlexSans-Light.woff') format('woff');
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}

@font-face { /* FW: 300, FS: italic */
  font-family: 'IBM Plex Sans';
  src: url('../assets/fonts/IBM_Plex_Sans/IBMPlexSans-LightItalic.woff2') format('woff2'),
      url('../assets/fonts/IBM_Plex_Sans/IBMPlexSans-LightItalic.woff') format('woff');
  font-weight: 300;
  font-style: italic;
  font-display: swap;
}

@font-face { /* FW: normal, FS: normal */
  font-family: 'IBM Plex Sans';
  src: url('../assets/fonts/IBM_Plex_Sans/IBMPlexSans-Regular.woff2') format('woff2'),
      url('../assets/fonts/IBM_Plex_Sans/IBMPlexSans-Regular.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face { /* FW: normal, FS: italic */
  font-family: 'IBM Plex Sans';
  src: url('../assets/fonts/IBM_Plex_Sans/IBMPlexSans-Italic.woff2') format('woff2'),
      url('../assets/fonts/IBM_Plex_Sans/IBMPlexSans-Italic.woff') format('woff');
  font-weight: normal;
  font-style: italic;
  font-display: swap;
}

@font-face { /* FW: 600, FS: normal */
  font-family: 'IBM Plex Sans';
  src: url('../assets/fonts/IBM_Plex_Sans/IBMPlexSans-SemiBold.woff2') format('woff2'),
      url('../assets/fonts/IBM_Plex_Sans/IBMPlexSans-SemiBold.woff') format('woff');
  font-weight: 600;
  font-style: normal;
  font-display: swap;
}

@font-face { /* FW: 600, FS: italic */
  font-family: 'IBM Plex Sans';
  src: url('../assets/fonts/IBM_Plex_Sans/IBMPlexSans-SemiBoldItalic.woff2') format('woff2'),
      url('../assets/fonts/IBM_Plex_Sans/IBMPlexSans-SemiBoldItalic.woff') format('woff');
  font-weight: 600;
  font-style: italic;
  font-display: swap;
}

@font-face { /* FW: bold, FS: normal */
  font-family: 'IBM Plex Sans';
  src: url('../assets/fonts/IBM_Plex_Sans/IBMPlexSans-Bold.woff2') format('woff2'),
      url('../assets/fonts/IBM_Plex_Sans/IBMPlexSans-Bold.woff') format('woff');
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

@font-face { /* FW: bold, FS: italic */
  font-family: 'IBM Plex Sans';
  src: url('../assets/fonts/IBM_Plex_Sans/IBMPlexSans-BoldItalic.woff2') format('woff2'),
      url('../assets/fonts/IBM_Plex_Sans/IBMPlexSans-BoldItalic.woff') format('woff');
  font-weight: bold;
  font-style: italic;
  font-display: swap;
}

:root {
  --dark-yellow: #e4a74e;
  --light-yellow: #ffc000;
  --dark-gray: #bfbfbf;
  --gray: #d5d5d5;
  --light-gray: #ececec;
  --dark-blue: #66a1ff;
  --light-blue: #85b4ff;
}

html {
  box-sizing: border-box;
}

*, *::after, *::before {
  font-family: 'IBM Plex Sans', Arial, Helvetica, sans-serif;
  box-sizing: inherit;
}

body {
  position: relative;
  width: 100vw;
  max-width: 100vw;
  height: 100vh;
  max-height: 100vh;
  background-color: black;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0px 10px;
}

.content {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

@media only screen and (min-width: 1100px) {
  .content {
    flex-direction: row-reverse;
    justify-content: center;
    gap: 100px;
    width: 100%;
    max-width: 1300px;
    height: 100%;
    max-height: 800px;
  }
}

.display-picture {
  width: 100%;
  max-width: 600px;
  display: flex;
  justify-content: center;
}

.display-picture > img {
  width: 100%;
}

.logo-info-container {
  display: flex;
  align-items: flex-start;
  height: 100%;
  gap: 8px;
  max-width: 100%;
}

@media only screen and (min-width: 1100px) {
  .display-picture {
    width: 75%;
  }

  .logo-info-container {
    width: 35%;
    flex-direction: column;
    align-items: flex-end;
  }
}

.logo-full {
  width: 55%;
  max-width: 330px;
}

.logo-full > img {
  width: 100%;
}

@media only screen and (min-width: 1100px) {
  .logo-full {
    width: 100%;
    margin-bottom: 10px;
  }
}


.mobile-button-container {
  width: 45%;
  height: inherit;
  max-width: 270px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.yellow-words {
  color: var(--light-yellow);
  font-size: 1.7rem;
  font-weight: normal;
  line-height: 35px;
  width: 100%;
  margin-top: -5px;
}

@media only screen and (min-width: 1100px) {
  .mobile-button-container {
    align-items: flex-end;
    width: 100%;
    max-width: 100%;
    height: fit-content;
  }

  .yellow-words {
    width: fit-content;
    /*font-size: 1.9rem;*/
    font-size: clamp(1.5rem, 1rem + 0.8vw, 1.9rem);
    margin-bottom: 40px;
  }
}

.service {
  display: none;
  color: var(--dark-gray);
}

@media only screen and (min-width: 1100px) {
  .service {
    display: block;
    /*font-size: 1.2rem;*/
    font-size: clamp(1rem, 0.7826rem + 0.3478vw, 1.2rem);
    margin-bottom: 0px;
  }
}

.more-link-mobile {
  width: 50%;
  border: none;
  background-color: black;
  color: var(--light-yellow);
  font-weight: normal;
  font-size: 1.4rem;
  margin-bottom: 2px;
  align-self: center;
  text-decoration: none;
}

.more-link-mobile > img {
  width: 30px;
}

@media only screen and (min-width: 1100px) {
  .more-link-mobile {
    display: none;
  }
}

.more {
  display: none;
}

@media only screen and (min-width: 1100px) {
  .more {
    display: block;
    margin-top: auto;
  }

  .more-link-desktop {
    border: none;
    background-color: black;
    color: var(--light-yellow);
    font-weight: normal;
    font-size: 1.4rem;
    display: flex;
    align-items: center;
    text-decoration: none;
  }

  .more-link-desktop > img {
    width: 32px;
    margin-top: 5px;
  }
}

.change-language {
  position: absolute;
  top: 10px;
  right: 10px;
  width: 25px;
  height: 25px;
}

@media only screen and (min-width: 1100px) {
  .change-language {
    width: 30px;
    height: 30px;
  }
}

